logout endpoint added
